# rgit

./: Cargo.toml
src/: args.rs  commands.rs  diff.rs  index.rs  main.rs  num.rs  objects.rs  rev.rs  tree.rs  util.rs
src/testdata/: test_index  test_index_tree
